Xong trang đầu tiên

--- a/index.html
+++ b/index.html
@@ -1,13 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="./asset/css/reset.css">
-   <link rel="stylesheet" href="./asset/css/style.css">
-   <title>Document</title>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="stylesheet" href="./asset/css/reset.css" />
+   <link rel="stylesheet" href="./asset/css/style.css" />
+   <!-- link Font -->
+   <link rel="preconnect" href="https://fonts.googleapis.com" />
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+   <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Sen:wght@700&display=swap"
+      rel="stylesheet" />
+   <title>F8-Project-02</title>
 </head>
+
 <body>
-   <h1>Hello</h1>
+   <header class="header">
+      <div class="content">
+         <div class="body">
+            <!-- logo -->
+            <img src="./asset/img/Logo.svg" alt="Lesson." class="logo" />
+            <!-- nav -->
+            <nav class="nav">
+               <ul>
+                  <li>
+                     <a href="#!">Home</a>
+                  </li>
+                  <li>
+                     <a href="#!">Courses</a>
+                  </li>
+                  <li>
+                     <a href="#!">Pricing</a>
+                  </li>
+                  <li>
+                     <a href="#!">Reviews</a>
+                  </li>
+               </ul>
+            </nav>
+            <!-- action -->
+            <div class="action">
+               <a href="#!" class="btn">Sign Up</a>
+            </div>
+         </div>
+         <div class="hero">
+            <div class="left">
+               <img src="./asset/img/hr-img-main.svg" alt="" class="img-main" />
+               <div class="info-left">
+                  <div class="column-1">
+                     <div class="frame">
+                        <img src="./asset/img/hr-icon-left-1.svg" alt="" class="icon" />
+                     </div>
+                     <div class="frame">
+                        <img src="./asset/img/hr-icon-left-2.svg" alt="" class="icon" />
+                     </div>
+                     <div class="frame">
+                        <img src="./asset/img/hr-icon-left-3.svg" alt="" class="icon" />
+                     </div>
+                  </div>
+                  <div class="column-2">
+                     <p class="num">20 Courses</p>
+                     <p class="sub-num">UI/UX Design</p>
+                     <p class="num">20 Courses</p>
+                     <p class="sub-num">Development</p>
+                     <p class="num">30 Courses</p>
+                     <p class="sub-num">Marketing</p>
+                  </div>
+               </div>
+            </div>
+            <div class="right">
+               <h1 class="title">
+                  Learn without limits and spread knowledge.
+               </h1>
+               <p class="desc">
+                  Build new skills for that “this is my year” feeling
+                  with courses, certificates, and degrees from
+                  world-class universities and companies.
+               </p>
+               <div class="row">
+                  <a href="#!" class="btn">See Courses</a>
+                  <div class="frame">
+                     <a href="#!" class="btn-img">
+                        <img src="./asset/img/hero-btn-img.svg" alt="" />
+                     </a>
+                  </div>
+                  <p class="desc-row">Watch Video</p>
+               </div>
+               <p class="desc desc-final">Recent engagement</p>
+               <div class="row row-final">
+                  <img src="./asset/img/50K Students.svg" alt="" class="img-final" />
+                  <img src="./asset/img/70+ Courses.svg" alt="" class="img-final" />
+               </div>
+            </div>
+         </div>
+      </div>
+   </header>
 </body>
+
 </html>
