--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 </head>
 
 <body>
+   <!-- header -->
    <header class="header">
       <div class="content">
          <div class="body">
             <!-- logo -->
-            <img src="./asset/img/Logo.svg" alt="Lesson." class="logo" />
+            <a href="#"><img src="./asset/img/Logo.svg" alt="Lesson." class="logo" /></a>
             <!-- nav -->
             <nav class="nav">
                <ul>
@@ -43,7 +44,11 @@
                <a href="#!" class="btn">Sign Up</a>
             </div>
          </div>
-         <div class="hero">
+      </div>
+   </header>
+   <main>
+      <div class="hero">
+         <div class="content">
             <div class="left">
                <img src="./asset/img/hr-img-main.svg" alt="" class="img-main" />
                <div class="info-left">
@@ -94,7 +99,71 @@
             </div>
          </div>
       </div>
-   </header>
+      <!-- course -->
+      <div class="course">
+         <div class="content">
+            <div class="course-top">
+               <div class="info">
+                  <h2 class="title">Our popular courses</h2>
+                  <p class="desc">Build new skills with new trendy courses and shine for the next future career.</p>
+               </div>
+               <div class="control">
+                  <img src="./asset/img/course-less-more-than.svg" alt="">
+               </div>
+            </div>
+            <div class="course-list">
+               <!-- course-item-1 -->
+               <div class="course-item">
+                  <img src="./asset/img/courses-img-1.jpg" alt="" class="thumb">
+                  <div class="info">
+                     <div class="head">
+                        <h3 class="sub-title">Basic web design</h3>
+                        <img src="./asset/img/course-star.svg" alt="" class="star">
+                        <span class="rate">4.5</span>
+                     </div>
+                     <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                     <div class="foot">
+                        <span class="price">$120.75</span>
+                        <button class="btn">Book Now</button>
+                     </div>
+                  </div>
+               </div>
+               <!-- course-item-2 -->
+               <div class="course-item">
+                  <img src="./asset/img/courses-img-2.jpg" alt="" class="thumb">
+                  <div class="info">
+                     <div class="head">
+                        <h3 class="sub-title">UI/UX design</h3>
+                        <img src="./asset/img/course-star.svg" alt="" class="star">
+                        <span class="rate">4.5</span>
+                     </div>
+                     <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                     <div class="foot">
+                        <span class="price">$120.75</span>
+                        <button class="btn">Book Now</button>
+                     </div>
+                  </div>
+               </div>
+               <!-- course-item-3 -->
+               <div class="course-item">
+                  <img src="./asset/img/courses-img-3.jpg" alt="" class="thumb">
+                  <div class="info">
+                     <div class="head">
+                        <h3 class="sub-title">Web App design</h3>
+                        <img src="./asset/img/course-star.svg" alt="" class="star">
+                        <span class="rate">4.5</span>
+                     </div>
+                     <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                     <div class="foot">
+                        <span class="price">$120.75</span>
+                        <button class="btn">Book Now</button>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </main>
 </body>
 
 </html>
