Xong phần feedback

--- a/index.html
+++ b/index.html
@@ -163,6 +163,31 @@
             </div>
          </div>
       </div>
+      <!-- Feedback -->
+      <div class="feedback">
+         <div class="content">
+            <div class="fb-list">
+               <div class="fb-item">
+                  <div class="info-left">
+                     <img src="./asset/img/feeback-avartar.jpg" alt="" class="avatar">
+                     <p class="title">Peter Moor</p>
+                     <p class="desc">Student of Web Design</p>
+                     <div class="dots">
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                     </div>
+                  </div>
+                  <div class="info-right">
+                     <img src="./asset/img/feedback-open-quotes.svg" alt="" class="open-quotes">
+                     <blockquote>Not only does my resume look impressive—filled with the names and logos of world-class
+                        institutions—but these certificates also bring me closer to my career goals by validating the
+                        skills I've learned." </blockquote>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
    </main>
 </body>
 
