--- a/index.html
+++ b/index.html
@@ -188,7 +188,166 @@
             </div>
          </div>
       </div>
+      <!-- Feature -->
+      <div class="feature">
+         <div class="content">
+            <div class="fea-row-1">
+               <div class="img-main">
+                  <img src="./asset/img/feature-1.jpg" alt="" class="image image-lower">
+                  <img src="./asset/img/courses-img-2.jpg" alt="" class="image">
+               </div>
+               <div class="info">
+                  <h2 class="title">Learner outcomes through our awesome platform</h2>
+                  <p class="desc">87% of people learning for professional development report career benefits like
+                     getting a promotion, a raise, or starting a new career.</p>
+                  <p class="desc">Lesson Impact Report (2022)</p>
+                  <button class="btn">Sign Up</button>
+               </div>
+            </div>
+            <div class="fea-row-2">
+               <div class="info">
+                  <h2 class="title">Take the next step toward your personal and professional goals with Lesson.</h2>
+                  <p class="desc">Take the next step toward. Join now to receive personalized and more recommendations
+                     from the full Coursera catalog.</p>
+                  <button class="btn">Join Now</button>
+               </div>
+               <img src="./asset/img/feature-3.jpg" alt="" class="image">
+            </div>
+         </div>
+      </div>
+      <!-- Blog -->
+      <div class="blog">
+         <div class="content">
+            <div class="head">
+               <h2 class="title">Our blog</h2>
+               <p class="desc">Read our regular travel blog and know the latest update of tour and travel</p>
+            </div>
+            <div class="list-blog">
+               <!-- blog-1 -->
+               <div class="blog-item">
+                  <img src="./asset/img/blog-1.jpg" alt="" class="image">
+                  <div class="frame">
+                     <div class="row-1">
+                        <span class="dot"></span>
+                        <p class="date">21 November 2021</p>
+                     </div>
+                     <div class="separate"></div>
+                     <p class="desc">How to become a pro web designer in 2022 and get remot job?</p>
+                     <button class="btn">Read More</button>
+                  </div>
+               </div>
+               <!-- blog-2 -->
+               <div class="blog-item">
+                  <img src="./asset/img/blog-2.jpg" alt="" class="image">
+                  <div class="frame">
+                     <div class="row-1">
+                        <span class="dot"></span>
+                        <p class="date">21 November 2021</p>
+                     </div>
+                     <div class="separate"></div>
+                     <p class="desc">How to become a pro web designer in 2022 and get remot job?</p>
+                     <button class="btn">Read More</button>
+                  </div>
+               </div>
+               <!-- blog-3 -->
+               <div class="blog-item">
+                  <img src="./asset/img/blog-3.jpg" alt="" class="image">
+                  <div class="frame">
+                     <div class="row-1">
+                        <span class="dot"></span>
+                        <p class="date">21 November 2021</p>
+                     </div>
+                     <div class="separate"></div>
+                     <p class="desc">How to become a pro web designer in 2022 and get remot job?</p>
+                     <button class="btn">Read More</button>
+                  </div>
+               </div>
+            </div>
+            <div class="row-bottom">
+               <div class="dot"></div>
+               <div class="dot"></div>
+               <div class="dot"></div>
+            </div>
+         </div>
+      </div>
    </main>
+   <div class="footer">
+      <div class="content">
+         <div class="row">
+            <!-- column-1 -->
+            <div class="column">
+               <img src="./asset/img/Footer-logo.svg" alt="Lesson." class="logo">
+               <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a lot easier
+                  with us.</p>
+               <div class="list-icon">
+                  <a href="#!" class="icon"><img src="./asset/img/Facebook.svg" alt=""></a>
+                  <a href="#!" class="icon"><img src="./asset/img/Instagram (1).svg" alt=""></a>
+                  <a href="#!" class="icon"><img src="./asset/img/twitter.svg" alt=""></a>
+                  <a href="#!" class="icon"><img src="./asset/img/Linkedin.svg" alt=""></a>
+               </div>
+            </div>
+            <!-- column-2 -->
+            <div class="column">
+               <h3 class="title">Company</h3>
+               <div class="separate"></div>
+               <ul class="list-info">
+                  <li>
+                     <a href="#!">About Us</a>
+                  </li>
+                  <li>
+                     <a href="#!">Features</a>
+                  </li>
+                  <li>
+                     <a href="#!">Our Pricing</a>
+                  </li>
+                  <li>
+                     <a href="#!">Latest News</a>
+                  </li>
+               </ul>
+            </div>
+            <!-- column-3 -->
+            <div class="column">
+               <h3 class="title">Support</h3>
+               <div class="separate"></div>
+               <ul class="list-info">
+                  <li>
+                     <a href="#!">FAQ’s</a>
+                  </li>
+                  <li>
+                     <a href="#!">Terms & Conditions</a>
+                  </li>
+                  <li>
+                     <a href="#!">Privacy Policy</a>
+                  </li>
+                  <li>
+                     <a href="#!">Contact Us</a>
+                  </li>
+               </ul>
+            </div>
+            <!-- column-4 -->
+            <div class="column">
+               <h3 class="title">Address</h3>
+               <div class="separate"></div>
+               <ul class="list-info">
+                  <li>
+                     <a href="#!"><strong>Location:</strong> 27 Division St,
+                        New York, NY 10002, USA</a>
+                  </li>
+                  <li>
+                     <a href="#!"><strong>Email:</strong> email@gmail.com</a>
+                  </li>
+                  <li>
+                     <a href="#!"><strong>Phone:</strong>+ 000 1234 567 890</a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+         <div class="separate-last">
+         </div>
+         <p class="desc-last">Copyright ©2022 webdesign.gdn All rights reserved</p>
+      </div>
+   </div>
+
 </body>
 
 </html>
